--- a/index.html
+++ b/index.html
@@ -3,26 +3,149 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I_Want_Solar_Energy.com</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <title>I Want Solar Energy.com</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="shortcut icon" href="images/logo.png" />
   </head>
   <body>
-    <header>
-      <img src="images/logo.png" alt="Logo"></img>
+    <header id="mainHeader">
+      <img src="images/logo.png" title="Logo" alt="Logo" />
       <h1>InHolland solar energy</h1>
       <h2>Make the world a better place</h2>
     </header>
-    <nav>
+    <nav id="navbar">
       <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="howsolarworks.html">help</a></li>
-        <li><a href="eusolar.html">europe</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a class="navbarItem active" href="#">home</a></li>
+        <li><a class="navbarItem" href="howsolarworks.html">help</a></li>
+        <li><a class="navbarItem" href="eusolar.html">europe</a></li>
+        <li><a class="navbarItem" href="contact.html">contact</a></li>
       </ul>
     </nav>
-    <video>
-      <source src="" type="video/mp4">
-      <p>Your browser does not support the video tag :(</p>
-    </video>
+    <section id="mainContent">
+      <section id="indexGrid"></section>
+      <h1>Video</h1>
+      <section id="mainVideo">
+        <video>
+          <source src="images/solar_panel.gif" type="gif" />
+          <p>Your browser does not support the video tag :(</p>
+        </video>
+      </section>
+      <section id="indexLayout">
+        <div id="productPage">
+          <h1>Products</h1>
+          <section id="mainProducts">
+            <article class="productCard">
+              <article>
+                <h3>Victron SmartSolar MPPT 100-50 12V 24V</h3>
+                <p>
+                  Bij 12 Volt max 700Wp aan zonnepanelen Bij 24 Volt max 1.400Wp
+                  aan zonnepanelen Bluetooth en gratis "Victron connect" app
+                  voor tablet/smartphone. De laadregelaar kunt u eenvoudig met
+                  de gratis Victron Connect app uitlezen op een
+                  Tablet/Ipad/Iphone/Samsung of andere smartphone. Gratis
+                  updates voor de laadregelaar via de Victron Connect app. Geen
+                  aparte display nodig, om te zien wat er gebeurt.
+                </p>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210"
+                  >More information</a
+                >
+              </article>
+              <section>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210"
+                  ><img
+                    src="images/products/Victron-Energy-SmartSolar-MPPT-100-50-_laadregelaar-solar-charger.png"
+                    title="Victron SmartSolar MPPT 100-50 12V 24V"
+                    alt="Victron SmartSolar MPPT 100-50 12V 24V"
+                /></a>
+                <footer>
+                  <a
+                    href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/59BA/3E70/D904/6269/74F3/0A0C/6D07/8A81/Victron-Energy-SmartSolar-MPPT-100-50-_laadregelaar-solar-charger.png"
+                    >source</a
+                  >
+                </footer>
+              </section>
+            </article>
+            <article class="productCard">
+              <article>
+                <h3>SMA Sunny Boy SB3.6 omvormer</h3>
+                <p>
+                  Type:SMA SB 3.6-1AV-41 Max. 5.500Wp aan zonnepanelen Mpp
+                  spanning: 130-500Volt DC Max uitgangsvermogen: 3.600W AC 2x
+                  MPP tracker 4 strings mogelijk Wifi en Webconnect Uitleesbaar
+                  met Ipad/tablet/smartphone of pc, overal ter Wereld waar een
+                  internet verbinding is.
+                </p>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22"
+                  >More information</a
+                >
+              </article>
+              <section>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22"
+                  ><img
+                    src="images/products/SMA-SB30-SB50-omvormer_turning.png"
+                    title="SMA Sunny Boy SB3.6 omvormer"
+                    alt="SMA Sunny Boy SB3.6 omvormer"
+                /></a>
+                <footer>
+                  <a
+                    href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/59CC/FDD6/78F8/AFD4/B750/0A0C/6D05/80CB/SMA-SB30-SB50-omvormer_turning_m.png"
+                    >source</a
+                  >
+                </footer>
+              </section>
+            </article>
+            <article class="productCard">
+              <article>
+                <h3>Victron Energy Multiplus 12V/3000W/120-16</h3>
+                <p>
+                  Multi-functioneel: 12 Volt pure sinus-omvormer naar 230V van
+                  3000W met een piek van 6000W 120 Ampere 12V 4 traps acculader
+                  16A doorgangsstroom AC Walstroom, aggregaat of uit de accu.
+                  Afmetingen: hoogte 362mm x breedte 258mm x diepte 218mm
+                  Gewicht: 19 kg
+                </p>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/PMP122300001"
+                  >More information</a
+                >
+              </article>
+              <section>
+                <a
+                  href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/PMP122300001"
+                  ><img
+                    src="images/products/Victron-Energy-MultiPlus-12V-3000W-120-50.jpg"
+                    title="Victron Energy Multiplus 12V/3000W/120-16"
+                    alt="Victron Energy Multiplus 12V/3000W/120-16"
+                /></a>
+                <footer>
+                  <a
+                    href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/5E00/F971/B68B/3B93/B0F6/0A0C/6D0C/F193/Victron-Energy-MultiPlus-12V-3000W-120-50_m.jpg"
+                    >source</a
+                  >
+                </footer>
+              </section>
+            </article>
+          </section>
+        </div>
+        <div id="reasonPage">
+          <h1>5 reasons why we recommand solar power</h1>
+          <article>
+            <p>1. Don't</p>
+            <p>2. Maybe?</p>
+            <p>3. Nah don't</p>
+            <p>4. Why get solar panels?</p>
+            <p>5. Lol they are kinda useless?</p>
+          </article>
+        </div>
+      </section>
+    </section>
+    <footer id="copyrightFooter">
+      &copy; Copyright 2020 Laurens van Coeverden
+    </footer>
+    <section id="cookie">May I take your cookie? 🍪</section>
   </body>
 </html>
