Paged more responsive now, also added new logo

--- a/eusolar.html
+++ b/eusolar.html
@@ -16,7 +16,6 @@
       <ul>
         <li><a class="navbarItem" href="index.html">home</a></li>
         <li><a class="navbarItem" href="howsolarworks.html">help</a></li>
-        <li><a class="navbarItem active" href="#">europe</a></li>
         <li><a class="navbarItem" href="contact.html">contact</a></li>
       </ul>
     </nav>
@@ -436,7 +435,7 @@
         </table>
         <footer id="tableFooter">Source of data &copy; 2020 Eurostat</footer>
       </section>
-      <section id="products_aside" class="eu_products">
+      <aside id="products_aside" class="eu_products">
         <section id="eu_articleList">
           <article class="card">
             <img
@@ -445,7 +444,12 @@
             />
             <h1>Solar Draaimolen</h1>
             <p class="price">&euro;35,-</p>
-            <p><button>Go to site</button></p>
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectID=1053694"
+                ><button>Go to site</button></a
+              >
+            </p>
           </article>
           <article class="card">
             <img
@@ -454,23 +458,29 @@
             />
             <h1>Steca 166 liter compressor koelkast</h1>
             <p class="price">&euro;1.099,-</p>
-            <p><button>Add to Cart</button></p>
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22Steca%20koelkast%2012V/24V%22"
+                ><button>Go to site</button></a
+              >
+            </p>
           </article>
           <article class="card">
-            <a href=""></a>
             <img
               src="images/products/Victron_Energy-Blue-Smart-IP65-Charger-12V-15A_m.png"
               alt="Victron Blue Smart IP65 Charger 12V 15A + DC Connector"
             />
             <h1>Victron Blue Smart IP65 Charger 12V 15A + DC Connector</h1>
             <p class="price">&euro;145,20</p>
-            <a
-              href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/BPC121531064R"
-              ><p><button>Add to Cart</button></p></a
-            >
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/BPC121531064R"
+                ><button>Go to site</button></a
+              >
+            </p>
           </article>
         </section>
-      </section>
+      </aside>
     </section>
     <footer id="copyrightFooter">
       &copy; Copyright 2020 Laurens van Coeverden
