--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Advertisement for Solar energy panels" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Laurens van Coeverden" />
     <title>I Want Solar Energy.com</title>
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="shortcut icon" href="images/logo.png" />
@@ -14,24 +17,27 @@
       <h2>Make the world a better place</h2>
     </header>
     <nav id="navbar">
-      <ul>
-        <li><a class="navbarItem active" href="#">home</a></li>
+      <ul id="burgeritems">
+        <label id="hamburgerLabel" for="hamburger">&#9776;</label>
+        <input type="checkbox" id="hamburgerIcon" />
         <li><a class="navbarItem" href="howsolarworks.html">help</a></li>
         <li><a class="navbarItem" href="eusolar.html">europe</a></li>
         <li><a class="navbarItem" href="contact.html">contact</a></li>
       </ul>
     </nav>
     <section id="mainContent">
-      <section id="indexGrid"></section>
-      <h1>Video</h1>
-      <section id="mainVideo">
-        <video>
-          <source src="images/solar_panel.gif" type="gif" />
-          <p>Your browser does not support the video tag :(</p>
-        </video>
-      </section>
-      <section id="indexLayout">
-        <div id="productPage">
+      <section id="indexFlexContainer">
+        <section id="mainVideo">
+          <h1>Video</h1>
+          <video controls loop autoplay="autoplay" muted>
+            <source
+              src="videos/How Solar Energy Panels Work.mp4"
+              type="video/mp4"
+            />
+            <p>Your browser does not support the video tag :(</p>
+          </video>
+        </section>
+        <section id="productPage">
           <h1>Products</h1>
           <section id="mainProducts">
             <article class="productCard">
@@ -62,7 +68,7 @@
                 <footer>
                   <a
                     href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/59BA/3E70/D904/6269/74F3/0A0C/6D07/8A81/Victron-Energy-SmartSolar-MPPT-100-50-_laadregelaar-solar-charger.png"
-                    >source</a
+                    ><em>source</em></a
                   >
                 </footer>
               </section>
@@ -93,7 +99,7 @@
                 <footer>
                   <a
                     href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/59CC/FDD6/78F8/AFD4/B750/0A0C/6D05/80CB/SMA-SB30-SB50-omvormer_turning_m.png"
-                    >source</a
+                    ><em>source</em></a
                   >
                 </footer>
               </section>
@@ -124,14 +130,14 @@
                 <footer>
                   <a
                     href="https://www.ikwilzonneenergie.nl/WebRoot/StoreNL/Shops/61494231/5E00/F971/B68B/3B93/B0F6/0A0C/6D0C/F193/Victron-Energy-MultiPlus-12V-3000W-120-50_m.jpg"
-                    >source</a
+                    ><em>source</em></a
                   >
                 </footer>
               </section>
             </article>
           </section>
-        </div>
-        <div id="reasonPage">
+        </section>
+        <section id="reasonPage">
           <h1>5 reasons why we recommand solar power</h1>
           <article>
             <p>1. Don't</p>
@@ -140,7 +146,7 @@
             <p>4. Why get solar panels?</p>
             <p>5. Lol they are kinda useless?</p>
           </article>
-        </div>
+        </section>
       </section>
     </section>
     <footer id="copyrightFooter">
