--- a/eusolar.html
+++ b/eusolar.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I_Want_Solar_Energy.com</title>
+    <meta name="description" content="Advertisement for Solar energy panels" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Laurens van Coeverden" />
+    <title>I Want Solar Energy.com</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="shortcut icon" href="images/logo.png" />
   </head>
   <body>
     <header id="mainHeader">
