updated pages, removed buttons te revoke html styling errors

--- a/eusolar.html
+++ b/eusolar.html
@@ -451,7 +451,7 @@
             <p>
               <a
                 href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectID=1053694"
-                ><button>Go to site</button></a
+                >Go to site</a
               >
             </p>
           </article>
@@ -465,7 +465,7 @@
             <p>
               <a
                 href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22Steca%20koelkast%2012V/24V%22"
-                ><button>Go to site</button></a
+                >Go to site</a
               >
             </p>
           </article>
@@ -479,7 +479,7 @@
             <p>
               <a
                 href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/BPC121531064R"
-                ><button>Go to site</button></a
+                >Go to site</a
               >
             </p>
           </article>
