--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -114,7 +114,12 @@
             />
             <h1>Solar Draaimolen</h1>
             <p class="price">&euro;35,-</p>
-            <p><button>Go to site</button></p>
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectID=1053694"
+                >Go to site</a
+              >
+            </p>
           </article>
           <article class="card">
             <img
@@ -123,7 +128,12 @@
             />
             <h1>Steca 166 liter compressor koelkast</h1>
             <p class="price">&euro;1.099,-</p>
-            <p><button>Add to Cart</button></p>
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22Steca%20koelkast%2012V/24V%22"
+                >Add to Cart</a
+              >
+            </p>
           </article>
           <article class="card">
             <img
@@ -132,10 +142,12 @@
             />
             <h1>Victron Blue Smart IP65 Charger 12V 15A + DC Connector</h1>
             <p class="price">&euro;145,20</p>
-            <a
-              href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/BPC121531064R"
-              ><p><button>Add to Cart</button></p></a
-            >
+            <p>
+              <a
+                href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/BPC121531064R"
+                >Add to Cart</a
+              >
+            </p>
           </article>
         </aside>
       </section>
