--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>Video</h1>
           <video controls loop autoplay="autoplay" muted>
             <source
-              src="videos/How Solar Energy Panels Work.mp4"
+              src="videos/How_Solar_Energy_Panels_Work.mp4"
               type="video/mp4"
             />
             <p>Your browser does not support the video tag :(</p>
