--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,12 @@
     </nav>
     <section id="mainContent">
       <section id="eusolar_grid">
+        <article id="contactArticle">
+          <h1>Please contact us if you have any questions!</h1>
+          <p>Extra information:</p>
+          <p>📞phone number: -------</p>
+          <p>📧Email: -----</p>
+        </article>
         <form
           id="userForm"
           action="http://i-want-solar-energy.com/testform.php"
