--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -29,39 +29,50 @@
           <article id="gridItem1">
             <h1>Solar panels</h1>
             <p>
-              Simply put, a solar panel works by allowing photons, or particles
-              of light, to knock electrons free from atoms, generating a flow of
-              electricity. Solar panels actually comprise many, smaller units
-              called photovoltaic cells. (Photovoltaic simply means they convert
-              sunlight into electricity.) Many cells linked together make up a
-              solar panel. Each photovoltaic cell is basically a sandwich made
-              up of two slices of semi-conducting material, usually silicon —
-              the same stuff used in microelectronics.
+              As the cost of solar energy has plummeted in recent years
+              alongside major improvements in technical efficiencies and
+              manufacturing quality, many homeowners across the U.S. are
+              starting to look at solar as a viable alternative energy solution.
+              And as solar enters mainstream energy markets, the big question
+              is, “how do solar panels work?” In this article, we’ll break down
+              exactly how solar panels produce energy for your home and how
+              pragmatic going solar really is.
+              <p><em><a href="https://news.energysage.com/solar-panels-work/"
+                >Credits</a
+              ></em></p>
             </p>
           </article>
           <article id="gridItem2">
             <h1>Charge controller</h1>
             <p>
-              A charge controller or charge regulator is basically a voltage
-              and/or current regulator to keep batteries from overcharging. It
-              regulates the voltage and current coming from the solar panels
-              going to the battery. Most but not all 12 volt panels put out
-              about 16 to 20 volts, so if there is no regulation the batteries
-              will be damaged from overcharging. Most batteries need around 14
-              to 14.5 volts to get fully charged.
+              A charge controller is an essential part of nearly all power
+              systems that charge batteries, whether the power source are solar
+              panels, wind, hydro, fuel, or the utility grid. Its purpose is to
+              keep your deep cycle batteries properly fed and safe for the long
+              term. The basic functions of a controller are quite simple. Charge
+              controllers block reverse current and prevent battery overcharge.
+              Some controllers also prevent battery overdischarge, protect from
+              electrical overload, and/or display battery status and the flow of
+              power. Let's examine each function individually.
+
+              <p><em><a
+                href="https://www.altestore.com/howto/how-charge-controllers-work-a3/"
+                >Credits</a
+              ></em></p>
             </p>
           </article>
           <article id="gridItem3">
-            <h1>Battery system</h1>
+            <h1>Home Battery system</h1>
             <p>
-              Battery storage systems generally consist of three main
-              components. a battery which contains individual battery cells
-              wired together, capable of discharging and being charged with DC
-              voltage. inverter-charger unit which is capable of converting DC
-              electricity from the battery to AC electricity and converting AC
-              to DC for charging the battery from mains power. balance of system
-              components such as wiring, battery management systems and other
-              measurement and control components such as meters and switches.
+              A home battery acts like a barrier between your home and the power
+              grid. It plugs right into your current electrical system to
+              optimize daily energy use and to provide backup power during a
+              grid failure. It does this by taking in power from the grid or
+              your solar panels and then strategically deploying it on your
+              house.
+              <p><em><a href="https://www.swellenergy.com/how-home-batteries-work/"
+                >Credits</a
+              ></em></p>
             </p>
           </article>
           <article id="gridItem4">
@@ -76,33 +87,44 @@
               electricity in a circuit consists of voltage, current and
               resistance. The flow of DC electricity is similar to the flow of
               water through a hose.
+              <p><em><a
+                href="https://electronics.howstuffworks.com/gadgets/automotive/dc-ac-power-inverter.htm"
+                >Credits</a
+              ></em></p>
             </p>
           </article>
           <article id="gridItem5">
             <h1>Inventer</h1>
             <p>
-              A inverter plays an essential role like a brain. The main function
-              of this is to alter DC power to AC power which is generated from
-              the solar array. Inverters convert direct current (DC) energy
-              which is generated from the solar panels into usable alternating
-              current (AC) energy. This current can be used for different
-              applications like in a viable electrical grid otherwise off-grid
-              electrical network. These inverters have some functions with PV
-              arrays like tracking of utmost PowerPoint & protection of
-              anti-islanding.
+              An invention is a unique or novel device, method, composition or
+              process. The invention process is a process within an overall
+              engineering and product development process. It may be an
+              improvement upon a machine or product or a new process for
+              creating an object or a result. An invention that achieves a
+              completely unique function or result may be a radical
+              breakthrough. Such works are novel and not obvious to others
+              skilled in the same field. An inventor may be taking a big step
+              toward success or failure.
+              <p><em><a href="https://en.wikipedia.org/wiki/Invention">Credits</a></em></p>
             </p>
           </article>
           <article id="gridItem6">
             <h1>AC power</h1>
             <p>
-              Alternating current describes the flow of charge that changes
-              direction periodically. As a result, the voltage level also
-              reverses along with the current. AC is used to deliver power to
-              houses, office buildings, etc. AC can be produced using a device
-              called an alternator. This device is a special type of electrical
-              generator designed to produce alternating current. AC can come in
-              a number of forms, as long as the voltage and current are
-              alternating.
+              Alternating current (AC) is an electric current which periodically
+              reverses direction and changes its magnitude continuously with
+              time in contrast to direct current (DC) which flows only in one
+              direction. Alternating current is the form in which electric power
+              is delivered to businesses and residences, and it is the form of
+              electrical energy that consumers typically use when they plug
+              kitchen appliances, televisions, fans and electric lamps into a
+              wall socket. A common source of DC power is a battery cell in a
+              flashlight. The abbreviations AC and DC are often used to mean
+              simply alternating and direct, as when they modify current or
+              voltage.
+              <p><em><a href="https://en.wikipedia.org/wiki/Alternating_current"
+                >Credits</a
+              ></em></p>
             </p>
           </article>
         </section>
