Updated some small information points

--- a/eusolar.html
+++ b/eusolar.html
@@ -24,7 +24,12 @@
       </ul>
     </nav>
     <section id="eusolar_grid">
-      <article class="eu_article">Hello europe world</article>
+      <article class="eu_article">
+        <p>
+          This page provides insight into how much solar energy is generated in
+          Europe per country.
+        </p>
+      </article>
       <section id="mainTable" class="eu_table">
         <table id="euroTable">
           <tbody>
