--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </section>
         </section>
         <section id="reasonPage">
-          <h1>5 reasons why we recommand solar power</h1>
+          <h1>5 reasons why we recommend solar power</h1>
           <article>
             <p>1. Solar is Easy</p>
             <p>2. Solar is Flexible</p>
